--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -111,7 +111,7 @@ a {
   background-color: $header-bg-color;
   // background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
 
-  background-image: url(../img/banner1.jpg);
+  background-image: url("https://niit-soft.oss-cn-hangzhou.aliyuncs.com/banner/banner1.jpg");
   background-size: cover;
 
   @include large {
