--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -220,6 +220,10 @@ a {
     color: $section-headings-color;
   }
 
+  h2 {
+    background-image: url("https://niit-soft.oss-cn-hangzhou.aliyuncs.com/banner/arrow.png");
+  }
+
   p {
     margin-bottom: 1em;
   }
